[tool.poetry]
name = "pipeline-orchestrator"
version = "0.1.0"
description = "Pipeline orchestrator API"
authors = ["Juan Espinoza <carlos_jcez@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = ">=2,<3"
pydantic-settings = "^2.3.0"
SQLAlchemy = "^2.0.30"
python-dotenv = "^1.0.1"
langchain-google-genai = ">=2.0.0"
aiokafka = "^0.12.0"
langchain = "^0.3.27"
google-generativeai = "^0.8.5"
alembic = "^1.16.4"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
